syntax = "proto2";
package serviceCommon;


message syncOutput {
    required uint32 lockState = 1;

    required float L1angle = 2;
    required float L1mag = 3;
    
    required float L2angle = 4;
    required float L2mag = 5;

    required float L3angle = 6;
    required float L3mag = 7;
    
    required float C1angle = 8;
    required float C1mag = 9;
    
    required float C2angle = 10;
    required float C2mag = 11;

    required float C3angle = 12;
    required float C3mag = 13;
}

message upmuData {
    required uint32 timeStamp = 1;
    required float sampleIntervalMsec = 2;
    required uint32 numSamples = 3;
    repeated syncOutput sample = 4;
}
    
